@@ -20,7 +20,6 @@ import static org.junit.Assert.assertNull;
 import static org.junit.Assert.fail;
 import static org.powermock.PowerMock.suppressConstructorCodeHierarchy;
 
-import org.junit.Ignore;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.powermock.core.classloader.annotations.PrepareForTest;
@@ -51,9 +50,8 @@ public class SuppressConstructorHierarchyDemoTest {
 			assertEquals("This should be suppressed!!", e.getMessage());
 		}
 	}
-
+	
 	@Test
-	@Ignore("Disabled for now")
 	public void testNotSuppressConstructorWithByteCodeManipulation() throws Exception {
 		try {
 			new SuppressConstructorHierarchyChild("message");
